Update Table, signal service, Clean code and validate form

--- a/to-do-app/src/app/user/to-do-list/filter/filter.component.html
+++ b/to-do-app/src/app/user/to-do-list/filter/filter.component.html
@@ -1,6 +1,6 @@
 <div class="container text-center justify-content-between">
 <div class="d-flex justify-content-between">
-    <a class="btn btn-info mt-4 col-3 shadow-sm" (click)="switchView()">Switch View : {{txtView}}</a>
+    <a class="btn btn-info mt-4 col-3 shadow-sm" (click)="switchViewMode()">Switch View : {{txtView}}</a>
     <a class="btn btn-primary mt-4 col-3 shadow-sm bg-primary.bg-gradient" (click)="goToPage('new')">Create TODO</a>
     <a class="btn btn-danger mt-4 col-3 shadow-sm" (click)="logout()">Logout</a>
 </div>
