--- a/to-do-app/src/app/user/to-do-list/form/form.component.html
+++ b/to-do-app/src/app/user/to-do-list/form/form.component.html
@@ -27,6 +27,7 @@
               />
           </div>
         </div>
-        <a  class="btn btn-primary col-md-3 mt-4" (click)="save()">Save</a>
+        <a  class="btn btn-primary col-md-2 mt-4" (click)="save()">Save</a>
+        <a  class="btn btn-primary col-md-2 mt-4" (click)="back()">Back</a>
     </div>
 </div>
