--- a/to-do-app/src/app/user/to-do-list/table-list/table-list.component.html
+++ b/to-do-app/src/app/user/to-do-list/table-list/table-list.component.html
@@ -1,20 +1,35 @@
-<div class="container text-center justify-content-center">
-  <div class="row mt-4 border justify-content-center text-start p-4 rounded bg-light">
+<div
+  *ngIf="switchService._switchView() === false"
+  class="container text-center justify-content-center"
+>
+  <div
+    class="row mt-4 border justify-content-center text-start p-4 rounded bg-light fade-in show"
+  >
     <div class="col-md-4"><h5>Title</h5></div>
     <div class="col-md-4"><h5>Description</h5></div>
     <div class="col-md-2"><h5>Update Date</h5></div>
     <div class="col-md-2 text-center"><h5>Action</h5></div>
   </div>
-
   <div *ngFor="let item of model; index as i">
-    <div class="shadow-sm row text-start d-flex mt-2 border p-4 rounded">
-      <div class="col-md-4 "><h6>{{ item.title }}</h6></div>
-      <div class="col-md-4 "><h6>{{ item.description }}</h6></div>
-      <div class="col-md-2 "><div class="text-center row"><h6 class="p-0 m-0">{{ item.updated_at | date:'d MMM YY' }} </h6></div><div class="text-center row "><h6 class="p-0 m-0">{{ item.updated_at | date:'HH:mm' }} </h6></div></div>
+    <div
+      class="shadow-sm row text-start d-flex mt-2 border p-4 rounded fade-in show"
+    >
+      <div class="col-md-4">
+        <h6>{{ item.title }}</h6>
+      </div>
+      <div class="col-md-4">
+        <h6>{{ item.description }}</h6>
+      </div>
+      <div class="col-md-2">
+        <div class="text-center row">
+          <h6 class="p-0 m-0">{{ item.updated_at | date : "d MMM YY" }}</h6>
+        </div>
+        <div class="text-center row">
+          <h6 class="p-0 m-0">{{ item.updated_at | date : "HH:mm" }}</h6>
+        </div>
+      </div>
       <div class="col-md-1 align-items-center">
-        <a
-          class="btn btn-info m-0"
-          (click)="goToPage('edit/' + item.id)"
+        <a class="btn btn-info m-0" (click)="goToPage('edit/' + item.id)"
           >Edit</a
         >
       </div>
@@ -23,4 +38,31 @@
       </div>
     </div>
   </div>
+</div>
+
+<div
+  *ngIf="switchService._switchView() === true"
+  class="container text-center justify-content-center"
+>
+  <table class="table table-hover table-light mt-4">
+    <thead >
+    <tr >
+      <th *ngFor="let column of modelMap.columns; index as i">{{ column.name }}</th>
+      <th>Action</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let item of modelMap.data">
+      <td *ngFor="let data of item">{{ data }}</td>
+      <td class="row justify-content-around"> <div class="col-md-1 align-items-center">
+        <a class="btn btn-info m-0" (click)="goToPage('edit/' + item[0])"
+          >Edit</a
+        >
+      </div>
+      <div class="col-md-1 align-items-center">
+        <a class="btn btn-danger m-0" (click)="delete(item[0])">Delete</a>
+      </div></td>
+    </tr>
+  </tbody>
+  </table>
 </div>
