--- a/to-do-app/src/app/login/login.component.html
+++ b/to-do-app/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container vh-100 justify-content-center align-items-center d-flex">
     <div class="text-center align-self-center">
-        <div class="row"><h4>Log in</h4></div>
+        <div class="row"><h4>Sign in</h4></div>
     <form [formGroup]="form" novalidate>
         <div class="mt-3">
           <div class="mt-3">
@@ -13,6 +13,9 @@
               formControlName="username"
               [(ngModel)]="model.username"
               />
+              <div *ngIf="form.get('username')?.invalid && (form.get('username')?.dirty || form.get('username')?.touched)" class="alert alert-danger" role="alert">
+                <div *ngIf="form.get('username')?.errors?.['required']">Username is required</div>
+              </div>
           </div>
         </div>
   
@@ -27,6 +30,9 @@
               formControlName="password"
               [(ngModel)]="model.password"
               />
+              <div *ngIf="form.get('password')?.invalid && (form.get('password')?.dirty || form.get('password')?.touched)" class="alert alert-danger" role="alert">
+                <div *ngIf="form.get('password')?.errors?.['required']">Password is required</div>
+              </div>
           </div>
         </div>
         <div class="mt-3 d-flex justify-content-evenly"><a class="btn btn-primary" (click)="login()">Sign in</a> <a class="btn btn-primary" (click)="registerPage()">Sign up</a></div>
