--- a/to-do-app/src/app/register/register.component.html
+++ b/to-do-app/src/app/register/register.component.html
@@ -1,11 +1,12 @@
 <div class="container vh-100 justify-content-center align-items-center d-flex">
     <div class="text-center align-self-center">
+      <div class="row"><h4>Sign up</h4></div>
     <form [formGroup]="form" novalidate>
-        <div>
-          <div>
+        <div class="mt-3">
+          <div class="mt-3">
             <h5>Username <span style="color: red"> *</span></h5>
           </div>
-          <div>
+          <div class="mt-3">
             <input
               type="text"
               class="form-control"
@@ -13,22 +14,29 @@
               [(ngModel)]="model.username"
               />
           </div>
+          <div *ngIf="form.get('username')?.invalid && (form.get('username')?.dirty || form.get('username')?.touched)" class="alert alert-danger" role="alert">
+            <div *ngIf="form.get('username')?.errors?.['required']">Username is required.</div>
+          </div>
         </div>
   
-        <div>
-          <div>
+        <div class="mt-3">
+          <div class="mt-3">
             <h5>Password <span style="color: red;"> *</span></h5>
           </div>
-          <div>
+          <div class="mt-3">
             <input
               type="password"
               class="form-control"
               formControlName="password"
               [(ngModel)]="model.password"
               />
+              <div *ngIf="form.get('password')?.invalid && (form.get('password')?.dirty || form.get('password')?.touched)" class="alert alert-danger" role="alert">
+                <div *ngIf="form.get('password')?.errors?.['required']">Password is required</div>
+              </div>
           </div>
         </div>
-        <input type="submit" class="btn btn-primary" (click)="register()">
+        <input type="submit" class="btn btn-primary mt-3" (click)="register()">
+        <a type="submit" class="btn btn-primary mt-3 ms-3" (click)="back()">Back</a>
       </form>
     </div>
 </div>
