--- a/to-do-app/src/app/register/register.component.html
+++ b/to-do-app/src/app/register/register.component.html
@@ -1,42 +1,62 @@
 <div class="container vh-100 justify-content-center align-items-center d-flex">
-    <div class="text-center align-self-center">
-      <div class="row"><h4>Sign up</h4></div>
+  <div class="text-center align-self-center card-content shadow p-4 bg-white">
+    <div class="row"><h4>Sign up</h4></div>
     <form [formGroup]="form" novalidate>
+      <div class="mt-3 row">
         <div class="mt-3">
-          <div class="mt-3">
-            <h5>Username <span style="color: red"> *</span></h5>
-          </div>
-          <div class="mt-3">
-            <input
-              type="text"
-              class="form-control"
-              formControlName="username"
-              [(ngModel)]="model.username"
-              />
-          </div>
-          <div *ngIf="form.get('username')?.invalid && (form.get('username')?.dirty || form.get('username')?.touched)" class="alert alert-danger" role="alert">
-            <div *ngIf="form.get('username')?.errors?.['required']">Username is required.</div>
+          <h5>Username</h5>
+        </div>
+        <div class="mt-3">
+          <input
+            type="text"
+            class="form-control"
+            formControlName="username"
+            [(ngModel)]="model.username"
+          />
+          <div
+            *ngIf="
+              form.get('username')?.invalid &&
+              (form.get('username')?.dirty || form.get('username')?.touched)
+            "
+            class="alert alert-danger"
+            role="alert"
+          >
+            <div *ngIf="form.get('username')?.errors?.['required']">
+              Username is required
+            </div>
           </div>
         </div>
-  
+      </div>
+
+      <div class="mt-3">
         <div class="mt-3">
-          <div class="mt-3">
-            <h5>Password <span style="color: red;"> *</span></h5>
-          </div>
-          <div class="mt-3">
-            <input
-              type="password"
-              class="form-control"
-              formControlName="password"
-              [(ngModel)]="model.password"
-              />
-              <div *ngIf="form.get('password')?.invalid && (form.get('password')?.dirty || form.get('password')?.touched)" class="alert alert-danger" role="alert">
-                <div *ngIf="form.get('password')?.errors?.['required']">Password is required</div>
-              </div>
+          <h5>Password</h5>
+        </div>
+        <div class="mt-3">
+          <input
+            type="password"
+            class="form-control"
+            formControlName="password"
+            [(ngModel)]="model.password"
+          />
+          <div
+            *ngIf="
+              form.get('password')?.invalid &&
+              (form.get('password')?.dirty || form.get('password')?.touched)
+            "
+            class="alert alert-danger"
+            role="alert"
+          >
+            <div *ngIf="form.get('password')?.errors?.['required']">
+              Password is required
+            </div>
           </div>
         </div>
-        <input type="submit" class="btn btn-primary mt-3" (click)="register()">
-        <a type="submit" class="btn btn-primary mt-3 ms-3" (click)="back()">Back</a>
-      </form>
-    </div>
+      </div>
+      <div class="mt-3 d-flex justify-content-evenly">
+        <a class="btn btn-success" (click)="register()">Submit</a>
+        <a class="btn btn-danger" (click)="back()">Back</a>
+      </div>
+    </form>
+  </div>
 </div>
