--- a/to-do-app/src/app/user/to-do-list/form/form.component.html
+++ b/to-do-app/src/app/user/to-do-list/form/form.component.html
@@ -27,7 +27,10 @@
               />
           </div>
         </div>
-        <a  class="btn btn-primary col-md-2 mt-4" (click)="save()">Save</a>
-        <a  class="btn btn-primary col-md-2 mt-4" (click)="back()">Back</a>
+        <div class="text-center justify-content-evenly row">
+          <a  class="btn btn-primary col-md-2 mt-4" (click)="save()">Save</a>
+          <a  class="btn btn-primary col-md-2 mt-4" (click)="back()">Back</a>
+        </div>
+        
     </div>
 </div>
